<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <groupId>Formation-test</groupId>
  <artifactId>Login-page-test</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Login-page-test</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
  </properties>

 <dependencies>
   
  <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
	<dependency>
    	<groupId>io.github.bonigarcia</groupId>
    	<artifactId>webdrivermanager</artifactId>
    	<version>5.9.1</version>
	</dependency>
  
  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
	<dependency>
    	<groupId>com.fasterxml.jackson.core</groupId>
    	<artifactId>jackson-databind</artifactId>
    	<version>2.13.3</version>
	</dependency>
	<dependency>
    	<groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-java</artifactId>
    	<version>4.9.0</version>
	</dependency>
<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 	<dependency>
    	<groupId>org.testng</groupId>
    	<artifactId>testng</artifactId>
    	<version>7.4.0</version>
    	<scope>test</scope>
  	</dependency>
  	<dependency>
    	<groupId>org.slf4j</groupId>
    	<artifactId>slf4j-simple</artifactId>
    	<version>2.0.0</version>
	</dependency>
   <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
	<dependency>
    	<groupId>com.aventstack</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>5.0.9</version>
	</dependency>

    <!-- Lombok dependency -->
    <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.28</version> <!-- Utilisez la version la plus récente -->
        <scope>provided</scope> <!-- Lombok est uniquement utilisé au moment de la compilation -->
    </dependency>
    <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-java</artifactId>
         <version>7.12.1</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
      <dependency>
        <groupId>io.cucumber</groupId>
        <artifactId>cucumber-testng</artifactId>
        <version>7.12.1</version>
     </dependency>


    
</dependencies>
  
  <profiles>
    <profile>
        <id>testng</id>
        <properties>
            <testng.version>7.4.0</testng.version>
        </properties>
        <dependencies>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
       	</dependencies>
	</profile>
  	<profile>
        <id> Regression</id>
        	<build>
        		<pluginManagement>
        			<plugins>
        				<plugin>
        					<groupId>org.apache.maven.plugins</groupId>
        					<artifactId>maven-surefire-plugin</artifactId>
        					<version>3.0.0-M5</version>
        					<configuration>
         					 	<suiteXmlFiles>
           						 	<suiteXmlFile>testSuites/testng.xml</suiteXmlFile>
          						</suiteXmlFiles>
        					</configuration>
      					</plugin>
        			</plugins>
        		</pluginManagement>
        	</build>
     </profile>
     <profile>
        <id> SubmitOrders</id>
        <build>
        		<pluginManagement>
        			<plugins>
        				<plugin>
        					<groupId>org.apache.maven.plugins</groupId>
        					<artifactId>maven-surefire-plugin</artifactId>
        					<version>3.0.0-M5</version>
        					<configuration>
         					 	<suiteXmlFiles>
           						 	<suiteXmlFile>testSuites/Purchase.xml</suiteXmlFile>
          						</suiteXmlFiles>
        					</configuration>
      					</plugin>
        			</plugins>
        		</pluginManagement>
        	</build>
     </profile>
     <profile>
        <id> ErrorValidations</id>
        <build>
        		<pluginManagement>
        			<plugins>
        				<plugin>
        					<groupId>org.apache.maven.plugins</groupId>
        					<artifactId>maven-surefire-plugin</artifactId>
        					<version>3.0.0-M5</version>
        					<configuration>
         					 	<suiteXmlFiles>
           						 	<suiteXmlFile>testSuites/ErrorValidationTests.xml</suiteXmlFile>
          						</suiteXmlFiles>
        					</configuration>
      					</plugin>
        			</plugins>
        		</pluginManagement>
        	</build>
     </profile>
     <profile>
        <id> CucumberTests</id>
        <build>
        		<pluginManagement>
        			<plugins>
        				<plugin>
        					<groupId>org.apache.maven.plugins</groupId>
        					<artifactId>maven-surefire-plugin</artifactId>
        					<version>3.0.0-M5</version>
        					<configuration>
         					 	<includes>
           						 	<include>cucumber/TestNGTestRunner.java</include>
          						</includes>
        					</configuration>
      					</plugin>
        			</plugins>
        		</pluginManagement>
        	</build>
     </profile>
</profiles>

  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.13.0</version>
  			<configuration>
                <compilerArgs>
                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                </compilerArgs>
            </configuration>
  		</plugin>
  	</plugins>
  </build>
  
</project>
